tests/paczka1/small_fuzzy/63029551.err
Error in line 5: 9BW A78 77,0
Error in line 6: oZexj1pJ S187 51,4
